using autoboxing to simply things a bit